@@ -14,7 +14,7 @@ The comment must be a valid Tcl list.
 
 These two are equivalent and adds a message filter rule for the line
 following it. The string argument will be part of the filter pattern,
-which is a glob pattern built like this: "*Line *$line:*$string*"
+which is a glob pattern built like this: "*Line* $line:*$string*"
 If the string is preceeded by "N", "W" or "E", anything from that
 severity level and down is ignored.
 
