@@ -78,10 +78,10 @@ proc testingwithproc2 {ob} {
 }
 --------------------------------------------------------------------------
 Implicitely available variables needs to be defined in each virtual namespace
-##nagelfar implicitvar itcl::class::Test::proc   c1
-##nagelfar implicitvar itcl::class::Test::method x1 x2 x3 c1
-##nagelfar implicitvar snit::type::pdf4tcl::pdf4tcl self\ _obj,pdf4tcl pdf
-##nagelfar implicitvar oo::class\ create::foo x
+##nagelfar implicitvarns itcl::class::Test::proc   c1
+##nagelfar implicitvarns itcl::class::Test::method x1 x2 x3 c1
+##nagelfar implicitvarns snit::type::pdf4tcl::pdf4tcl self\ _obj,pdf4tcl pdf
+##nagelfar implicitvarns oo::class\ create::foo x
 --------------------------------------------------------------------------
 The syntax token "do" (define object) automatically adds an _obj,xxx command.
 xxx is the tail of the defined name. Examples:
