@@ -11,7 +11,7 @@ test packages-1.1 {
         ##nagelfar option apa -x
         ##nagelfar option _obj,apa\ configure -x
 
-        ##nagelfar implicitvar snit::type::apa self\ _obj,apa pdf
+        ##nagelfar implicitvarns snit::type::apa self\ _obj,apa pdf
 
         snit::type apa {
             option -x -default 10
@@ -43,7 +43,7 @@ test packages-1.2 {
         ##nagelfar option apa -x
         ##nagelfar option _obj,apa\ configure -x
 
-        ##nagelfar implicitvar snit::type::apa self\ _obj,apa pdf
+        ##nagelfar implicitvarns snit::type::apa self\ _obj,apa pdf
 
         snit::type apa {
             option -x -default 10
